# robotics_software_engineer

./: README.md
module_1_assignment/: CMakeLists.txt  Readme.md
module_1_assignment/src/: task_1.cpp  task_2  task_2.cpp  task_3.h  task_3_class.cpp  task_3_main.cpp
module_2_assignment/: CMakeLists.txt  Readme.md  Readme2.md
module_2_assignment/launch/: turtletest1.launch.py  turtletest2.launch.py
module_2_assignment/src/: task_1.cpp
module_3_assignment/: CMakeLists.txt  Readme.md
module_3_assignment/launch/: gazebo.launch.py  rviz.launch.py
module_3_assignment/urdf/: diff_4.urdf  manipulator.urdf
module_4_assignment/: CMakeLists.txt  Readme.md
module_4_assignment/launch/: maze_square.launch.py
module_4_assignment/model/square/: model.sdf
module_4_assignment/src/: mazesolving.excalidraw  task1.cpp  task3.cpp  task4.cpp
module_4_assignment/world/: square.world
module_5_assignment/: CMakeLists.txt  Readme.md
module_5_assignment/config/: position_controller.yaml
module_5_assignment/launch/: lqr_multi_goals.launch.py  manipulator.launch.py
module_5_assignment/src/: lqr_node.cpp  task1.cpp  task2.cpp  task3.txt  task4.txt
module_5_assignment/urdf/: manipulator.urdf  mobile_manipulator.urdf
module_6_assignment/: CMakeLists.txt  Readme.md
module_6_assignment/config/: fusion.yaml
module_6_assignment/launch/: fusion.launch.py
module_6_assignment/src/: ekf_node.cpp
robot_sensing_debug/launch/: camera_line_following.launch.py  lidar_maze_solving.launch.py
robot_sensing_debug/models/line_track/: model.sdf
robot_sensing_debug/worlds/: line_following.world
